tests/fixtures/errors/bare_union_dotted.z
# E0300: a unit-qualified bare variant name does not construct either.
main: function is {
    e: system.parseerror
    print "\{e.empty}"
}
